--- a/client/public/index.html
+++ b/client/public/index.html
@@ -72,7 +72,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>HRMS by Mantzaris Vasilis</title>
+    <title>NEDAMCO Africa HRM System</title>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <noscript>You need to enable JavaScript to run this app.</noscript>
